fixing wrong colour

--- a/stylesheets/socials.css
+++ b/stylesheets/socials.css
@@ -26,11 +26,11 @@
   }
 
 .Seperator{
-    width: 100%;
+
     height: 6px;
 
     opacity: 0;
-    background-color: var(--secondary-2);
+    background-color: var(--primary-text);
 }
 .socials:hover .Seperator{
     opacity: 1;
